# cti-report-generator

./: .env.example  .gitignore  AI_AGENT_RECOMMENDATION.md  AUDIT.md  CHANGES.md  CONFIGURATION.md  CONTEXT_MANAGEMENT.md  CONTRIBUTING.md  CTI REPORT GENERATOR SYSTEM FLOW.md  CTI_Quarterly_Strategic_Brief_2026-05-26.docx  CTI_Quarterly_Strategic_Brief_2026-05-31.docx  CTI_Quarterly_Strategic_Report_Example.docx  CTI_Weekly_Report_2026-02-05.docx  CTI_Weekly_Report_2026-04-15.docx  CTI_Weekly_Report_2026-05-26.docx  CTI_Weekly_Report_2026-05-27.docx  CTI_Weekly_Report_2026-05-28.docx  CTI_Weekly_Report_2026_Week30v1.docx  CTI_Weekly_Report_2026_Week30v2.docx  CTI_Weekly_Report_Template_Example.docx  CTI_Weekly_Report_Template_Spec.json  GATE_AUDIT_RESULTS.md  IMPLEMENTATION_SUMMARY.md  IOC_CORRELATION_README.md  LICENSE  METRICS_EXPLAINED.md  PRIORITY_SYSTEM.md  README.md  REVIEW_SUGGESTIONS.md  Skill-Example  api_collectors.py  cache_rapid7_local.py  config.py  diagnostic_rapid7_products.py  function_app.py  ioc_correlation_integration.py  ioc_correlator.py  keyvault_helper.py  local.settings.json.template  models.py  (+29 more)
Rapid7SyncFunction/: function.json
assets/: CTI_Weekly_Report_Template_Spec.json
collectors/: __init__.py  base.py  crowdstrike_collector.py  http_utils.py  intel471_collector.py  nvd_collector.py  rapid7_collector.py  registry.py  threatq_collector.py
config/: collectors.yaml  customer_profile.yaml  features.yaml  osint_sources.yaml
cursor_rulesets/: CURSOR_RULES_API.md  CURSOR_RULES_ARCHITECTURE.md  CURSOR_RULES_AZURE.md  CURSOR_RULES_PYTHON.md  (+7 more)
(+149 files in other folders)
