[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cti-report-generator"
version = "0.1.0"
description = "Azure Functions-based Cyber Threat Intelligence (CTI) reporting system"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
# The application code lives under src/ (src.collectors, src.reports, src.gates, ...).
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "W291",  # trailing whitespace — remaining occurrences are inside prompt-template strings
    "W293",  # blank line with whitespace — same (string content, not code)
]

[tool.ruff.lint.per-file-ignores]
# Standalone utility scripts insert the repo root on sys.path before importing.
"scripts/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
